--- a/tin-tuc-01.html
+++ b/tin-tuc-01.html
@@ -342,6 +342,8 @@
                       Nguồn :
                       http://vneconomy.vn/cuoc-song-so/cong-nghe-so-hoa-ung-dung-tri-tue-nhan-tao-phat-trien-manh-o-viet-nam-20171004092520.html
                     </a>
+                  </div>
+                  <div class="news-box">
                     <div class="list-share">
                       <div class="text">
                         <p>Chia sẻ</p>
