--- a/trangchu.html
+++ b/trangchu.html
@@ -214,7 +214,9 @@
                 <div class="swiper-slide slide-one">
                   <div class="banner-content">
                     <div class="banner-content-img img-small">
-                      <img src="./assets/img/trangchu/banner3-01.png" alt="" class="img">
+                      <a href="#">
+                        <img src="./assets/img/trangchu/banner3-01.png" alt="" class="img">
+                      </a>
                     </div>
                     <div class="banner-content-title">
 
@@ -227,14 +229,61 @@
 
                     </div>
                     <div class="banner-content-title">
-
+                      <div class="banner-list">
+                        <div class="container">
+                          <div class="list-box">
+                            <div class="list-left">
+                              <span class="banner-img">Vũ Thảo</span>
+                              <p>Cùng <span>phát</span> <span>triển</span></p>
+                              <p>Trở thành đối tác với chúng tôi</p>
+                              <a href="#" class="hvr-float-shadow">
+                                Đăng ký
+                              </a>
+                            </div>
+                            <div class="list-right">
+                              <div class="vpop" data-type="youtube" data-id="6xcG6ttMDVY" data-autoplay='true'>
+                                <img src="./assets/img/trangchu/banner2-video.png" alt="">
+                              </div>
+                              <div id="video-popup-overlay"></div>
+                              <div id="video-popup-container">
+                                <div id="video-popup-close" class="fade">&#10006;</div>
+                                <div id="video-popup-iframe-container">
+                                  <!-- Thay đổi -->
+                                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/_tTm_C_vbrI"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    allowfullscreen></iframe>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="list-wrap">
+                          <div class="banner-partner">
+                            <div class="partner-text">
+                              <p>
+                                Được tin tưởng bởi <span> 100+ </span> công ty lớn nhỏ tại Việt Nam
+                              </p>
+                            </div>
+                            <div class="partner-logo">
+                              <img src="./assets/img/trangchu/banner-VA.png" alt="">
+                              <img src="./assets/img/trangchu/banner-TC.png" alt="">
+                              <img src="./assets/img/trangchu/banner-PT.png" alt="">
+                              <img src="./assets/img/trangchu/banner-VIB.png" alt="">
+                              <img src="./assets/img/trangchu/banner-HP.png" alt="">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
                 <div class="swiper-slide slide-three">
                   <div class="banner-content">
                     <div class="banner-content-img img-small">
-                      <img src="./assets/img/trangchu/banner3-03.png" alt="" class="img">
+                      <a href="#">
+                        <img src="./assets/img/trangchu/banner3-03.png" alt="" class="img">
+                      </a>
                     </div>
                     <div class="banner-content-title">
 
