--- a/trangchu.html
+++ b/trangchu.html
@@ -249,8 +249,9 @@
                                 <div id="video-popup-close" class="fade">&#10006;</div>
                                 <div id="video-popup-iframe-container">
                                   <!-- Thay đổi -->
-                                  <iframe width="100%" height="100%" src="https://www.youtube.com/embed/_tTm_C_vbrI"
-                                    title="YouTube video player" frameborder="0"
+                                  <iframe id="video-popup-iframe" width="560" height="315"
+                                    src="https://www.youtube.com/embed/EGgJHfVcHJY" title="YouTube video player"
+                                    frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     allowfullscreen></iframe>
                                 </div>
@@ -259,18 +260,20 @@
                           </div>
                         </div>
                         <div class="list-wrap">
-                          <div class="banner-partner">
-                            <div class="partner-text">
-                              <p>
-                                Được tin tưởng bởi <span> 100+ </span> công ty lớn nhỏ tại Việt Nam
-                              </p>
-                            </div>
-                            <div class="partner-logo">
-                              <img src="./assets/img/trangchu/banner-VA.png" alt="">
-                              <img src="./assets/img/trangchu/banner-TC.png" alt="">
-                              <img src="./assets/img/trangchu/banner-PT.png" alt="">
-                              <img src="./assets/img/trangchu/banner-VIB.png" alt="">
-                              <img src="./assets/img/trangchu/banner-HP.png" alt="">
+                          <div class="container">
+                            <div class="banner-partner">
+                              <div class="partner-text">
+                                <p>
+                                  Được tin tưởng bởi <span> 100+ </span> công ty lớn nhỏ tại Việt Nam
+                                </p>
+                              </div>
+                              <div class="partner-logo">
+                                <img src="./assets/img/trangchu/banner-VA.png" alt="">
+                                <img src="./assets/img/trangchu/banner-TC.png" alt="">
+                                <img src="./assets/img/trangchu/banner-PT.png" alt="">
+                                <img src="./assets/img/trangchu/banner-VIB.png" alt="">
+                                <img src="./assets/img/trangchu/banner-HP.png" alt="">
+                              </div>
                             </div>
                           </div>
                         </div>
