--- a/lien-he.html
+++ b/lien-he.html
@@ -435,18 +435,12 @@
                       </li>
                       <li>
                         <a href="#" class="hvr-float">
-                          <img
-                            src="./assets/img/trangchu/linkedin.svg"
-                            alt=""
-                          />
+                          <img src="./assets/img/trangchu/linkedin.svg" alt="" />
                         </a>
                       </li>
                       <li>
                         <a href="#" class="hvr-float">
-                          <img
-                            src="./assets/img/trangchu/facebook.svg"
-                            alt=""
-                          />
+                          <img src="./assets/img/trangchu/facebook.svg" alt="" />
                         </a>
                       </li>
                     </ul>
@@ -457,9 +451,9 @@
                 <div class="footer-box-col">
                   <h3>Trụ sở chính</h3>
                   <p>
-                    Tầng 3, Phòng 3.15, Khu I, Toà nhà The Prince Residence, số
-                    19-21 Nguyễn Văn Trỗi, P.12, Q. Phú Nhuận, TP Hồ Chí Minh,
-                    VN
+                    Tầng 3, Phòng 3.15, Khu I, Toà nhà The Prince Residence,
+                    số 19-21 Nguyễn Văn Trỗi, P.12, Q. Phú Nhuận, TP Hồ Chí
+                    Minh, VN
                   </p>
                 </div>
                 <div class="footer-box-col">
@@ -472,8 +466,8 @@
                 <div class="footer-box-col">
                   <h3>Trung tâm phần mềm và dịch vụ</h3>
                   <p>
-                    Tầng 2-4-6, Toà nhà MG Building, Số 2-2B Lam Sơn, Phường 2,
-                    Q. Tân Bình, TP Hồ Chí Minh, VN
+                    Tầng 2-4-6, Toà nhà MG Building, Số 2-2B Lam Sơn, Phường
+                    2, Q. Tân Bình, TP Hồ Chí Minh, VN
                     <span> (Địa chỉ liên hệ chính dịch vụ phần mềm)</span>
                   </p>
                 </div>
@@ -483,24 +477,16 @@
                   <h3>Công ty Cổ Phần Công Nghệ Vũ Thảo</h3>
                   <ul>
                     <li>
-                      <a href="#" class="hover"
-                        >Mã số thuế: <span>0301805897</span></a
-                      >
+                      <a href="#" class="hover">Mã số thuế: <span>0301805897</span></a>
                     </li>
                     <li>
-                      <a href="#" class="hover"
-                        >Người đại diện: Trần Thanh Phong</a
-                      >
+                      <a href="#" class="hover">Người đại diện: Trần Thanh Phong</a>
                     </li>
                     <li>
-                      <a href="#" class="hvr-wobble-horizontal"
-                        >Email: <span>lienhe@vuthao.com</span></a
-                      >
+                      <a href="#" class="hvr-wobble-horizontal">Email: <span>lienhe@vuthao.com</span></a>
                     </li>
                     <li>
-                      <a href="#" class="hvr-wobble-horizontal"
-                        >Hotline: 090 117 0659</a
-                      >
+                      <a href="#" class="hvr-wobble-horizontal">Hotline: 090 117 0659</a>
                     </li>
                     <li>
                       <img src="./assets/img/trangchu/footer-BCT.png" alt="" />
@@ -511,7 +497,9 @@
                   <h3>Về chúng tôi</h3>
                   <ul>
                     <li>
-                      <a href="#" class="hvr-wobble-horizontal"> Giới thiệu </a>
+                      <a href="#" class="hvr-wobble-horizontal">
+                        Giới thiệu
+                      </a>
                     </li>
                     <li>
                       <a href="#" class="hvr-wobble-horizontal">
@@ -577,86 +565,73 @@
                       </a>
                     </li>
                     <li class="hvr-wobble-horizontal">
-                      <a href="#"
-                        >Enterprise Portal - Cổng thông tin doanh nghiệp</a
-                      >
+                      <a href="#">Enterprise Portal - Cổng thông tin doanh nghiệp</a>
                     </li>
                   </ul>
                   <h3>Tuyển dụng</h3>
-                  <div class="footer-box-popup">
-                    <div class="footer-box-cover">
-                      <div class="footer-box-contents" tabindex="-1">
-                        <form action="">
-                          <div class="input-box">
-                            <div class="input-list">
-                              <div class="input-img">
-                                <img
-                                  src="./assets/img/trangchu/logo.svg"
-                                  alt=""
-                                />
-                              </div>
-                              <div class="input-close">
-                                <div class="three-dots">
-                                  <a>
-                                    <i class="ic-three-dots"></i>
-                                  </a>
-                                  <div id="popup" class="popup-face">
-                                    <p>
-                                      <a href="#"> Truy cập trang Facebook </a>
-                                    </p>
-                                    <p>
-                                      <a href="#">
-                                        Thêm Messenger vào trang web của bạn
-                                      </a>
-                                    </p>
+                  <div id="button">
+                    <div class="footer-box-popup">
+                      <div class="footer-box-cover">
+                        <div class="footer-box-contents" tabindex="-1">
+                          <form action="">
+                            <div class="input-box">
+                              <div class="input-list">
+                                <div class="input-img">
+                                  <img src="./assets/img/trangchu/logo.svg" alt="" />
+                                </div>
+                                <div class="input-close">
+                                  <div class="three-dots">
+                                    <a>
+                                      <i class="ic-three-dots"></i>
+                                    </a>
+                                    <div id="popup" class="popup-face">
+                                      <p>
+                                        <a href="#">
+                                          Truy cập trang Facebook
+                                        </a>
+                                      </p>
+                                      <p>
+                                        <a href="#">
+                                          Thêm Messenger vào trang web của bạn
+                                        </a>
+                                      </p>
+                                    </div>
+                                  </div>
+                                  <div class="line">
+                                    <a class="close">
+                                      <i class="ic-line"></i>
+                                    </a>
                                   </div>
                                 </div>
-                                <div class="line">
-                                  <a class="close">
-                                    <i class="ic-line"></i>
-                                  </a>
-                                </div>
+                              </div>
+                              <div class="input-chat">
+                                <p>Chat với vuthao.com.vn</p>
+                                <img src="./assets/img/trangchu/footer-tick.svg" alt="" />
+                              </div>
+                              <div class="input-support">
+                                <p>Bạn đang cần tư vấn giải pháp nào?</p>
+                              </div>
+                              <div class="footer-box-register hvr-float-shadow">
+                                <a href="#" class="footer-box-button">
+                                  <p>Bắt đầu</p>
+                                </a>
+                              </div>
+                              <div class="input-mess">
+                                <img src="./assets/img/trangchu/footer-popup-mess.svg" alt="" />
+                                <p>Powered by Messenger</p>
                               </div>
                             </div>
-                            <div class="input-chat">
-                              <p>Chat với vuthao.com.vn</p>
-                              <img
-                                src="./assets/img/trangchu/footer-tick.svg"
-                                alt=""
-                              />
-                            </div>
-                            <div class="input-support">
-                              <p>Bạn đang cần tư vấn giải pháp nào?</p>
-                            </div>
-                            <div class="footer-box-register hvr-float-shadow">
-                              <a href="#" class="footer-box-button">
-                                <p>Bắt đầu</p>
-                              </a>
-                            </div>
-                            <div class="input-mess">
-                              <img
-                                src="./assets/img/trangchu/footer-popup-mess.svg"
-                                alt=""
-                              />
-                              <p>Powered by Messenger</p>
-                            </div>
-                          </div>
-                        </form>
+                          </form>
+                        </div>
+                      </div>
+                      <div class="footer-box-contact hvr-pulse-grow">
+                        <img src="./assets/img/trangchu/footer-messenger.svg" alt="" />
                       </div>
                     </div>
-                    <div class="footer-box-contact hvr-pulse-grow">
-                      <img
-                        src="./assets/img/trangchu/footer-messenger.svg"
-                        alt=""
-                      />
-                    </div>
-                  </div>
-                  <div class="footer-box-popup">
-                    <div class="input-contact pulsate-bck">
-                      <img
-                        src="./assets/img/trangchu/footer-phone.svg"
-                        alt=""
-                      />
+                    <div class="footer-box-popup">
+                      <div class="input-contact pulsate-bck">
+                        <img src="./assets/img/trangchu/footer-phone.svg" alt="" />
+                      </div>
                     </div>
                   </div>
                 </div>
