--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -1856,67 +1856,69 @@
                   </li>
                 </ul>
                 <h3>Tuyển dụng</h3>
-                <div class="footer-box-popup">
-                  <div class="footer-box-cover">
-                    <div class="footer-box-contents" tabindex="-1">
-                      <form action="">
-                        <div class="input-box">
-                          <div class="input-list">
-                            <div class="input-img">
-                              <img src="./assets/img/trangchu/logo.svg" alt="" />
-                            </div>
-                            <div class="input-close">
-                              <div class="three-dots">
-                                <a>
-                                  <i class="ic-three-dots"></i>
-                                </a>
-                                <div id="popup" class="popup-face">
-                                  <p>
-                                    <a href="#">
-                                      Truy cập trang Facebook
-                                    </a>
-                                  </p>
-                                  <p>
-                                    <a href="#">
-                                      Thêm Messenger vào trang web của bạn
-                                    </a>
-                                  </p>
+                <div id="button">
+                  <div class="footer-box-popup">
+                    <div class="footer-box-cover">
+                      <div class="footer-box-contents" tabindex="-1">
+                        <form action="">
+                          <div class="input-box">
+                            <div class="input-list">
+                              <div class="input-img">
+                                <img src="./assets/img/trangchu/logo.svg" alt="" />
+                              </div>
+                              <div class="input-close">
+                                <div class="three-dots">
+                                  <a>
+                                    <i class="ic-three-dots"></i>
+                                  </a>
+                                  <div id="popup" class="popup-face">
+                                    <p>
+                                      <a href="#">
+                                        Truy cập trang Facebook
+                                      </a>
+                                    </p>
+                                    <p>
+                                      <a href="#">
+                                        Thêm Messenger vào trang web của bạn
+                                      </a>
+                                    </p>
+                                  </div>
+                                </div>
+                                <div class="line">
+                                  <a class="close">
+                                    <i class="ic-line"></i>
+                                  </a>
                                 </div>
                               </div>
-                              <div class="line">
-                                <a class="close">
-                                  <i class="ic-line"></i>
-                                </a>
-                              </div>
+                            </div>
+                            <div class="input-chat">
+                              <p>Chat với vuthao.com.vn</p>
+                              <img src="./assets/img/trangchu/footer-tick.svg" alt="" />
+                            </div>
+                            <div class="input-support">
+                              <p>Bạn đang cần tư vấn giải pháp nào?</p>
+                            </div>
+                            <div class="footer-box-register hvr-float-shadow">
+                              <a href="#" class="footer-box-button">
+                                <p>Bắt đầu</p>
+                              </a>
+                            </div>
+                            <div class="input-mess">
+                              <img src="./assets/img/trangchu/footer-popup-mess.svg" alt="" />
+                              <p>Powered by Messenger</p>
                             </div>
                           </div>
-                          <div class="input-chat">
-                            <p>Chat với vuthao.com.vn</p>
-                            <img src="./assets/img/trangchu/footer-tick.svg" alt="" />
-                          </div>
-                          <div class="input-support">
-                            <p>Bạn đang cần tư vấn giải pháp nào?</p>
-                          </div>
-                          <div class="footer-box-register hvr-float-shadow">
-                            <a href="#" class="footer-box-button">
-                              <p>Bắt đầu</p>
-                            </a>
-                          </div>
-                          <div class="input-mess">
-                            <img src="./assets/img/trangchu/footer-popup-mess.svg" alt="" />
-                            <p>Powered by Messenger</p>
-                          </div>
-                        </div>
-                      </form>
+                        </form>
+                      </div>
+                    </div>
+                    <div class="footer-box-contact hvr-pulse-grow">
+                      <img src="./assets/img/trangchu/footer-messenger.svg" alt="" />
                     </div>
                   </div>
-                  <div class="footer-box-contact hvr-pulse-grow">
-                    <img src="./assets/img/trangchu/footer-messenger.svg" alt="" />
-                  </div>
-                </div>
-                <div class="footer-box-popup">
-                  <div class="input-contact pulsate-bck">
-                    <img src="./assets/img/trangchu/footer-phone.svg" alt="" />
+                  <div class="footer-box-popup">
+                    <div class="input-contact pulsate-bck">
+                      <img src="./assets/img/trangchu/footer-phone.svg" alt="" />
+                    </div>
                   </div>
                 </div>
               </div>
