--- a/tin-tuc-01.html
+++ b/tin-tuc-01.html
@@ -218,7 +218,7 @@
                         <span>Tin tức </span>
                       </a>
                       <p>
-                        / Kiến thức quản trị
+                         / Kiến thức quản trị
                       </p>
                     </div>
                     <h1>
@@ -624,106 +624,94 @@
                   <div class="customer-inner-title">
                     <h3>Bài viết liên quan</h3>
                   </div>
-                  <div class="manage-rows-swiper tablist-inner-panel-swipper">
-                    <div class="swiper">
-                      <div class="swiper-wrapper">
-                        <!-- Slide 1 -->
-                        <div class="swiper-slide">
-                          <div class="tablist-inner-body">
-                            <div class="tablist-reading">
-                              <img src="./assets/img/tintuc/news-img1-tt02.jpg" alt="" />
-                            </div>
-                            <div class="content-small">
-                              <div class="info-small">
-                                <p>
-                                  <a href="tin-tuc-01.html">
-                                    Công nghệ số hóa ứng dụng trí tuệ nhân
-                                    tạo phát triển mạnh ở Việt Nam
-                                  </a>
-                                </p>
-                              </div>
-                              <div class="time-small">
-                                <p>Tin tức sản phẩm</p>
-                                <p>13:20 02/03/2022</p>
-                              </div>
-                              <div class="text-small">
-                                <p>
-                                  Trên thế giới, trí tuệ nhân tạo (AI) đã
-                                  trở thành một thuật ngữ phổ biến trong
-                                  thiết kế sản phẩm, cơ sở hạ tầng nhằm tối
-                                  ưu hóa côn…
-                                </p>
-                              </div>
-                            </div>
-                          </div>
+                  <div class="manage-rows-swiper">
+                    <!-- Page 1 -->
+                    <div class="tablist-inner-body">
+                      <div class="tablist-reading">
+                        <img src="./assets/img/tintuc/news-img1-tt02.jpg" alt="" />
+                      </div>
+                      <div class="content-small">
+                        <div class="info-small">
+                          <p>
+                            <a href="tin-tuc-01.html">
+                              Công nghệ số hóa ứng dụng trí tuệ nhân
+                              tạo phát triển mạnh ở Việt Nam
+                            </a>
+                          </p>
                         </div>
-                        <!-- End Slide 1 -->
-                        <!-- Slide 2 -->
-                        <div class="swiper-slide">
-                          <div class="tablist-inner-body">
-                            <div class="tablist-reading">
-                              <img src="./assets/img/tintuc/news-img2-tt02.jpg" alt="" />
-                            </div>
-                            <div class="content-small">
-                              <div class="info-small">
-                                <p>
-                                  <a href="tin-tuc-01.html">
-                                    Hội thảo về giá trị của dữ liệu trong
-                                    chuyển đổi số trong thời đại 4.0
-                                  </a>
-                                </p>
-                              </div>
-                              <div class="time-small">
-                                <p>Kiến thức hữu ích</p>
-                                <p>13:20 02/03/2022</p>
-                              </div>
-                              <div class="text-small">
-                                <p>
-                                  Giá trị của dữ liệu và vấn đề liên quan
-                                  đến pháp lý, quá trình thu thập, xử lý
-                                  thông tin sẽ được thảo luận trong Vietnam
-                                  Data Summit
-                                </p>
-                              </div>
-                            </div>
-                          </div>
+                        <div class="time-small">
+                          <p>Tin tức sản phẩm</p>
+                          <p>13:20 02/03/2022</p>
                         </div>
-                        <!-- End Slide 2 -->
-                        <!-- Slide 3 -->
-                        <div class="swiper-slide">
-                          <div class="tablist-inner-body">
-                            <div class="tablist-reading">
-                              <img src="./assets/img/tintuc/news-img3-tt02.jpg" alt="" />
-                            </div>
-                            <div class="content-small">
-                              <div class="info-small">
-                                <p>
-                                  <a href="tin-tuc-01.html">
-                                    Công nghệ số hóa ứng dụng trí tuệ nhân
-                                    tạo phát triển mạnh ở Việt Nam
-                                  </a>
-                                </p>
-                              </div>
-                              <div class="time-small">
-                                <p>Tin tức sản phẩm</p>
-                                <p>13:20 02/03/2022</p>
-                              </div>
-                              <div class="text-small">
-                                <p>
-                                  Trên thế giới, trí tuệ nhân tạo (AI) đã
-                                  trở thành một thuật ngữ phổ biến trong
-                                  thiết kế sản phẩm, cơ sở hạ tầng nhằm tối
-                                  ưu hóa côn…
-                                </p>
-                              </div>
-                            </div>
-                          </div>
+                        <div class="text-small">
+                          <p>
+                            Trên thế giới, trí tuệ nhân tạo (AI) đã
+                            trở thành một thuật ngữ phổ biến trong
+                            thiết kế sản phẩm, cơ sở hạ tầng nhằm tối
+                            ưu hóa côn…
+                          </p>
                         </div>
-                        <!-- End Slide 3 -->
                       </div>
                     </div>
-                    <div class="swiper-button-next tablist-swiper-next"></div>
-                    <div class="swiper-button-prev tablist-swiper-prev"></div>
+                    <!-- End Page 1 -->
+                    <!-- Page 2 -->
+                    <div class="tablist-inner-body">
+                      <div class="tablist-reading">
+                        <img src="./assets/img/tintuc/news-img2-tt02.jpg" alt="" />
+                      </div>
+                      <div class="content-small">
+                        <div class="info-small">
+                          <p>
+                            <a href="tin-tuc-01.html">
+                              Hội thảo về giá trị của dữ liệu trong
+                              chuyển đổi số trong thời đại 4.0
+                            </a>
+                          </p>
+                        </div>
+                        <div class="time-small">
+                          <p>Kiến thức hữu ích</p>
+                          <p>13:20 02/03/2022</p>
+                        </div>
+                        <div class="text-small">
+                          <p>
+                            Giá trị của dữ liệu và vấn đề liên quan
+                            đến pháp lý, quá trình thu thập, xử lý
+                            thông tin sẽ được thảo luận trong Vietnam
+                            Data Summit
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Page 2 -->
+                    <!-- Page 3 -->
+                    <div class="tablist-inner-body">
+                      <div class="tablist-reading">
+                        <img src="./assets/img/tintuc/news-img3-tt02.jpg" alt="" />
+                      </div>
+                      <div class="content-small">
+                        <div class="info-small">
+                          <p>
+                            <a href="tin-tuc-01.html">
+                              Công nghệ số hóa ứng dụng trí tuệ nhân
+                              tạo phát triển mạnh ở Việt Nam
+                            </a>
+                          </p>
+                        </div>
+                        <div class="time-small">
+                          <p>Tin tức sản phẩm</p>
+                          <p>13:20 02/03/2022</p>
+                        </div>
+                        <div class="text-small">
+                          <p>
+                            Trên thế giới, trí tuệ nhân tạo (AI) đã
+                            trở thành một thuật ngữ phổ biến trong
+                            thiết kế sản phẩm, cơ sở hạ tầng nhằm tối
+                            ưu hóa côn…
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End Page 3 -->
                   </div>
                 </div>
               </div>
@@ -731,7 +719,9 @@
           </div>
         </div>
       </div>
-    </section>
+  </div>
+  </div>
+  </section>
   </div>
 
   <footer id="footer">
