--- a/tin-tuc-01.html
+++ b/tin-tuc-01.html
@@ -215,10 +215,10 @@
                   <div class="news-list">
                     <div class="news-breadcrumb">
                       <a href="tin-tuc.html">
-                        <span>Tin tức </span>
+                        <span>Tin tức&nbsp;</span>
                       </a>
                       <p>
-                         / Kiến thức quản trị
+                        / Kiến thức quản trị
                       </p>
                     </div>
                     <h1>
@@ -238,6 +238,7 @@
                         phổ biến thì việc có những công nghệ đi đầu ứng dụng AI
                         như giải pháp IONE từ công ty FSI chính là một điểm sáng.
                       </span>
+                      </p>
                     <div class="news-table active">
                       <p>Mục lục</p>
                       <button class="btn-toggle">
@@ -256,6 +257,7 @@
                         </p>
                       </div>
                     </div>
+                    <p>
                     <br>
                     Cục Thương mại điện tử và Công nghệ thông tin (Bộ Công
                     Thương) cho biết, cách mạng công nghiệp lần thứ 4 đang và
