--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -387,7 +387,7 @@
                           </div>
                           <div class="tablist-inner-col-item exp-manage">
                             <!-- Page 1 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img1-tt02.jpg" alt="" />
                               </div>
@@ -416,7 +416,7 @@
                             </div>
                             <!-- End Page 1 -->
                             <!-- Page 2 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="200" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img2-tt02.jpg" alt="" />
                               </div>
@@ -445,7 +445,7 @@
                             </div>
                             <!-- End Page 2 -->
                             <!-- Page 3 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img3-tt02.jpg" alt="" />
                               </div>
@@ -474,7 +474,7 @@
                             </div>
                             <!-- End Page 3 -->
                             <!-- Page 4 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img4-tt02.jpg" alt="" />
                               </div>
@@ -503,7 +503,7 @@
                             </div>
                             <!-- End Page 4 -->
                             <!-- Page 5 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="500" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img5-tt02.jpg" alt="" />
                               </div>
@@ -532,7 +532,7 @@
                             </div>
                             <!-- End Page 5 -->
                             <!-- Page 6 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="600" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img6-tt02.jpg" alt="" />
                               </div>
@@ -561,7 +561,7 @@
                             </div>
                             <!-- End Page 6 -->
                             <!-- Page 7 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="700" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img7-tt02.jpg" alt="" />
                               </div>
@@ -590,7 +590,7 @@
                             </div>
                             <!-- End Page 7 -->
                             <!-- Page 8 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="800" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img8-tt02.jpg" alt="" />
                               </div>
@@ -619,7 +619,7 @@
                             </div>
                             <!-- End Page 8 -->
                             <!-- Page 9 -->
-                            <div class="tablist-inner-body">
+                            <div class="tablist-inner-body" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="900" data-aos-offset="0">
                               <div class="tablist-reading">
                                 <img src="./assets/img/tintuc/news-img9-tt02.jpg" alt="" />
                               </div>
