--- a/san-pham.html
+++ b/san-pham.html
@@ -227,7 +227,8 @@
           <div class="content-wrap">
             <div class="content-box">
               <!-- Page 1 -->
-              <div class="content-inner">
+              <div class="content-inner" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
+                data-aos-offset="0">
                 <div class="content-column">
                   <div class="content-column-title">
                     <p>DPM - Digital Process Management</p>
@@ -347,7 +348,8 @@
               </div>
               <!-- End Page 1 -->
               <!-- Page 2 -->
-              <div class="content-inner">
+              <div class="content-inner" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
+                data-aos-offset="0">
                 <div class="content-column">
                   <div class="content-column-title">
                     <p>Dsign - Digital Signature Portal</p>
@@ -383,7 +385,8 @@
               </div>
               <!-- End Page 2 -->
               <!-- Page 3 -->
-              <div class="content-inner">
+              <div class="content-inner" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
+                data-aos-offset="0">
                 <div class="content-column">
                   <div class="content-column-title border-yellow">
                     <p>DCM – Digital Content management</p>
@@ -420,7 +423,8 @@
               </div>
               <!-- End Page 3 -->
               <!-- Page 4 -->
-              <div class="content-inner">
+              <div class="content-inner" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
+                data-aos-offset="0">
                 <div class="content-column">
                   <div class="content-column-title border-blue">
                     <p>Eoffice - Văn phòng điện tử</p>
@@ -465,7 +469,8 @@
               </div>
               <!-- End Page 4 -->
               <!-- Page 5 -->
-              <div class="content-inner">
+              <div class="content-inner" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
+                data-aos-offset="0">
                 <div class="content-column">
                   <div class="content-column-title border-purple">
                     <p>Enterprise Portal - Cổng thông tin doanh nghiệp</p>
@@ -521,7 +526,7 @@
           <div class="customer-wrap">
             <div class="customer-box">
               <div class="customer-inner">
-                <div class="customer-inner-title">
+                <div class="customer-inner-title" data-aos="zoom-out">
                   <h2><span> Câu chuyện </span>khách hàng</h2>
                   <p>
                     Chia sẻ kinh nghiệm về việc áp dụng chuyển đổi số và giao
@@ -534,7 +539,7 @@
                     <div class="swiper-wrapper">
                       <!-- Slide 1 -->
                       <div class="swiper-slide">
-                        <div class="customer-inner-body hvr-float-shadow">
+                        <div class="customer-inner-body">
                           <div class="customer-img">
                             <img src="./assets/img/sanpham/home-img9.jpg" alt="" />
                           </div>
@@ -549,7 +554,7 @@
                               được với khách hàng tốt hơn trước rất nhiều.”
                             </p>
                             <div class="customer-content-button">
-                              <a href="#" class="btn btn-yellow hvr-float-shadow">
+                              <a href="#" class="btn btn-yellow">
                                 <span>Xem chi tiết</span>
                               </a>
                             </div>
@@ -559,7 +564,7 @@
                       <!-- End Slide 1 -->
                       <!-- Slide 2 -->
                       <div class="swiper-slide">
-                        <div class="customer-inner-body hvr-float-shadow">
+                        <div class="customer-inner-body">
                           <div class="customer-img">
                             <img src="./assets/img/sanpham/home-img10.jpg" alt="" />
                           </div>
@@ -574,7 +579,7 @@
                               được với khách hàng tốt hơn trước rất nhiều.”
                             </p>
                             <div class="customer-content-button">
-                              <a href="#" class="btn btn-darkblue hvr-float-shadow">
+                              <a href="#" class="btn btn-darkblue">
                                 <span>Xem chi tiết</span>
                               </a>
                             </div>
@@ -584,7 +589,7 @@
                       <!-- End Slide 2 -->
                       <!-- Slide 3 -->
                       <div class="swiper-slide">
-                        <div class="customer-inner-body hvr-float-shadow">
+                        <div class="customer-inner-body">
                           <div class="customer-img">
                             <img src="./assets/img/sanpham/home-img11.jpg" alt="" />
                           </div>
@@ -599,7 +604,7 @@
                               được với khách hàng tốt hơn trước rất nhiều.”
                             </p>
                             <div class="customer-content-button">
-                              <a href="#" class="btn btn-green hvr-float-shadow">
+                              <a href="#" class="btn btn-green">
                                 <span>Xem chi tiết</span>
                               </a>
                             </div>
